--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,8 +65,8 @@
     --heading-font-size-xl: 36px;
     --heading-font-size-l: 28px;
     --heading-font-size-m: 22px;
-    --heading-font-size-s: 20px;
-    --heading-font-size-xs: 18px;
+    --heading-font-size-s: 18px;
+    --heading-font-size-xs: 14px;
   }
 }
 
@@ -107,7 +107,7 @@ h6 {
   margin-top: 0.8em;
   margin-bottom: 0.25em;
   font-family: var(--heading-font-family);
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.25;
   scroll-margin: 40px;
 }
@@ -125,8 +125,8 @@ ol,
 ul,
 pre,
 blockquote {
-  margin-top: 0.8em;
-  margin-bottom: 0.25em;
+  margin-top: 0.25em;
+  margin-bottom: 0.5em;
 }
 
 code,
@@ -177,7 +177,7 @@ button {
   padding: 0.5em 1.2em;
   font-family: var(--body-font-family);
   font-style: normal;
-  font-weight: 500;
+  font-weight: 300;
   line-height: 1.25;
   text-align: center;
   text-decoration: none;
@@ -1146,4 +1146,11 @@ footer .transparent-footer-wrapper,
       }
     }
   }
+}
+
+div.section > .default-content-wrapper > h2:first-child{
+  margin-bottom: 2rem;
+  text-align: center;
+  font-family: "anova-light";
+  font-size: 3rem;
 }
